--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -6,7 +6,7 @@ on:
       - main  # Change this to your default branch
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -38,3 +38,25 @@ jobs:
       - name: Push Docker Image
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/springboot-app:latest
+  
+  update_k8s_manifests:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout GitOps repository
+        uses: actions/checkout@v2
+        with:
+          repository: kskml/boot-k8s-argocd
+          token: ${{ secrets.GH_TOKEN }}
+
+      - name: Update Deployment.yaml with new image tag
+        run: |
+          sed -i "s|image: kskml/springboot-app:.*|image: kskml/springboot-app:${{ github.sha }}|" k8s/deployment.yaml
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add k8s/deployment.yaml
+          git commit -m "Update image tag to ${{ github.sha }}"
+          git push
