--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: springapp
-          image: kskml/springboot-app
+          image: kskml/springboot-app:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
