--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - main  # Change this to your default branch
-
+env:
+  SHORT_SHA: ${{ github.sha }}
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -30,9 +31,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Set short SHA
-        id: vars
-        run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
       - name: Build and push Docker image with commit SHA
         uses: docker/build-push-action@v2
         with:
