--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -13,13 +13,11 @@ jobs:
     steps:
       - name: Generate timestamp tag
         id: timestamp
-        run: echo "tag=$(date +%Y%m%d-%H%M%S)" >> "$GITHUB_OUTPUT"
+        run: echo "tag=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_OUTPUT
         
   build-and-push:
     runs-on: ubuntu-latest
     needs: set-tag
-    env:
-      IMAGE_TAG: ${{ needs.set-tag.outputs.image-tag }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
