--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -47,7 +47,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/springboot-app:${{ needs.set-tag.outputs.image-tag }}
   update_k8s_manifests:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: [set-tag, build-and-push]
     env:
       IMAGE_TAG: ${{ needs.set-tag.outputs.image-tag }}
     steps:
