--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,6 +18,8 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     needs: set-tag
+    env:
+      IMAGE_TAG: ${{ needs.set-tag.outputs.image_tag }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -44,7 +46,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/springboot-app:${{ needs.set-tag.outputs.image-tag }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/springboot-app:$IMAGE_TAG
   update_k8s_manifests:
     runs-on: ubuntu-latest
     needs: [set-tag, build-and-push]
@@ -57,8 +59,9 @@ jobs:
           repository: kskml/boot-k8s-argocd
           token: ${{ secrets.GH_TOKEN }}
       - name: Update Deployment.yaml with new image tag
+          echo "tag :"+$IMAGE+TAG 
         run: |
-          sed -i "s|image: kskml/springboot-app:.*|image: kskml/springboot-app:${{ needs.set-tag.outputs.image-tag }}|" k8s/deployment.yaml
+          sed -i "s|image: kskml/springboot-app:.*|image: kskml/springboot-app:$IMAGE_TAG|" k8s/deployment.yaml
 
       - name: Commit and push changes
         run: |
