--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: set-tag
     env:
-      IMAGE_TAG: ${{ needs.set-tag.outputs.image_tag }}
+      IMAGE_TAG: ${{ needs.set-tag.outputs.image-tag }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
