--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/springboot-app:$IMAGE_TAG
+          tags: ${{ secrets.DOCKER_USERNAME }}/springboot-app:${{ needs.set-tag.outputs.image-tag }}
   update_k8s_manifests:
     runs-on: ubuntu-latest
     needs: [set-tag, build-and-push]
@@ -61,7 +61,7 @@ jobs:
       - name: Update Deployment.yaml with new image tag
           echo "tag :"+$IMAGE+TAG 
         run: |
-          sed -i "s|image: kskml/springboot-app:.*|image: kskml/springboot-app:$IMAGE_TAG|" k8s/deployment.yaml
+          sed -i "s|image: kskml/springboot-app:.*|image: kskml/springboot-app:${{ needs.set-tag.outputs.image-tag }}|" k8s/deployment.yaml
 
       - name: Commit and push changes
         run: |
