--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,18 +3,19 @@ name: Spring Boot CI/CD
 on:
   push:
     branches:
-      - main  # Change this to your default branch
+      - main  # Change this if your default branch is different
 
 jobs:
   set-tag:
     runs-on: ubuntu-latest
     outputs:
-      image-tag: ${{ steps.timestamp.outputs.tag }}
+      image-tag: ${{ steps.timestamp.outputs.image_tag }}
     steps:
       - name: Generate timestamp tag
         id: timestamp
-        run: echo "tag=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_OUTPUT
-        
+        run: |
+          echo "image_tag=$(date +%Y%m%d-%H%M%S)" >> "$GITHUB_OUTPUT"
+
   build-and-push:
     runs-on: ubuntu-latest
     needs: set-tag
@@ -41,12 +42,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push Docker image with commit SHA
-        uses: docker/build-push-action@v2
+
+      - name: Build and push Docker image with timestamp tag
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/springboot-app:${{ needs.set-tag.outputs.image-tag }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/springboot-app:${{ env.IMAGE_TAG }}
+
   update_k8s_manifests:
     runs-on: ubuntu-latest
     needs: [set-tag, build-and-push]
@@ -54,19 +57,21 @@ jobs:
       IMAGE_TAG: ${{ needs.set-tag.outputs.image-tag }}
     steps:
       - name: Checkout GitOps repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: kskml/boot-k8s-argocd
           token: ${{ secrets.GH_TOKEN }}
+          path: gitops
+
       - name: Update Deployment.yaml with new image tag
-          echo "tag :"+$IMAGE+TAG 
         run: |
-          sed -i "s|image: kskml/springboot-app:.*|image: kskml/springboot-app:${{ needs.set-tag.outputs.image-tag }}|" k8s/deployment.yaml
+          sed -i "s|image: kskml/springboot-app:.*|image: kskml/springboot-app:$IMAGE_TAG|" gitops/k8s/deployment.yaml
 
       - name: Commit and push changes
         run: |
+          cd gitops
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add k8s/deployment.yaml
-          git commit -m "Update image tag to ${{ github.sha }}"
+          git commit -m "Update image tag to $IMAGE_TAG"
           git push
