--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -73,5 +73,5 @@ jobs:
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add k8s/deployment.yaml
-          git commit -m "Update image tag to $IMAGE_TAG"
+          git commit -m "Update image tag to $IMAGE_TAG [skip ci]"
           git push
